<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SDKLauncher-Android</string>
    <string name="action_settings">Settings</string>
    <string name="add_bookmark_prompt_placeholder">Name</string>
    <string name="add_bookmark_prompt_title">Add Bookmark</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="delete_bookmark">Do you want to delete this bookmark?</string>
    <string name="bookmarks_with_count">Bookmarks (%1$d)</string>
    <string name="container_list_title">Choose an EPUB</string>
    <string name="generic_cancel">Cancel</string>
    <string name="generic_ok">OK</string>
    <string name="list_of_figures">List of Figures</string>
    <string name="list_of_illustrations">List of Illustrations</string>
    <string name="list_of_tables">List of Tables</string>
    <string name="metadata">Metadata</string>
    <string name="metadata_authors">Authors: %1$s</string>
    <string name="metadata_copyright_owner">Copyright Owner: %1$s</string>
    <string name="metadata_full_title">Full Title: %1$s</string>
    <string name="metadata_isbn">ISBN: %1$s</string>
    <string name="metadata_language">Language: %1$s</string>
    <string name="metadata_modification_date">Modification Date: %1$s</string>
    <string name="metadata_package_id">Package ID: %1$s</string>
    <string name="metadata_source">Source: %1$s</string>
    <string name="metadata_subjects">Subjects: %1$s</string>
    <string name="metadata_subtitle">Subtitle: %1$s</string>
    <string name="metadata_title">Title: %1$s</string>
    <string name="page_list">Page List</string>
    <string name="page_x_of_y">Page %1$d of %2$d</string>
    <string name="page_x_dash_y_of_z">Page %1$d-%2$d of %3$d</string>
    <string name="spine_items">Spine Items</string>
    <string name="table_of_contents">Table of Contents</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="add_bookmark">Add bookmark</string>
    <string name="settings">Settings</string>
    <string name="title">Title</string>
    <string name="left">&lt;&lt;</string>
    <string name="right">&gt;&gt;</string>
    <string name="fontSize">Font size (in %)</string>
    <string name="columnGap">Column gap</string>
    <string name="syntheticSpread">Synthetic spread</string>
    
    <!-- Media Overlay Menu Text -->
    <string name="menu_mo_previous">Previous</string>
    <string name="menu_mo_next">Next</string>
    <string name="menu_mo_play">Play</string>
    <string name="menu_mo_pause">Pause</string>
    <string name="auto">Auto</string>
    <string name="single">Single</string>
    <string name="double_">Double</string>
    <string name="scrollMode">Scroll Mode</string>

</resources>