<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >

    <Button
        android:id="@+id/backToBookView"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="bookname" />

    <TextView
        android:id="@+id/metadata_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_full_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_full_title"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_subtitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_authors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_authors"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_language"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_source"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_source"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_copyright_owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_copyright_owner"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_modification_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_modification_date"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_package_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_package_id"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_isbn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_isbn"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/metadata_subjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/metadata_subjects"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>