<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp">
    
	<TextView android:text="@string/fontSize"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@android:style/TextAppearance.Medium"
	    android:paddingLeft="8dp"/>
	<EditText android:hint="@string/fontSize"
	    android:id="@+id/fontSize"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"/>
	<TextView android:text="@string/columnGap"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    style="@android:style/TextAppearance.Medium"
	    android:paddingLeft="8dp"/>
	<EditText android:hint="@string/columnGap"
	    android:id="@+id/columnGap"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:inputType="number"/>
	<CheckBox android:text="@string/syntheticSpread"
	    android:id="@+id/syntheticSpread"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
		<Button android:text="@android:string/cancel"
		    android:id="@+id/cancel"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"/>
		<Button android:text="@android:string/ok"
		    android:id="@+id/ok"
		    android:layout_width="0dp"
		    android:layout_weight="1"
		    android:layout_height="wrap_content"/>
	</LinearLayout>
</LinearLayout>
